interface to the port implementor in an incompatible way.  See below for
full details.

** All ports are now buffered, can be targets of `setvbuf'

See "Buffering" in the manual, for more.  A port with a buffer size of 1
is equivalent to an unbuffered port.  Ports may set their default buffer
sizes, and some ports (for example soft ports) are unbuffered by default
for historical reasons.

** Removal of port locks

As part of the 2.2 series, we introduced recursive locks on each port,
and arranged to lock them to avoid crashes but also to serialize I/O in
some ways.  This turned out to be a mistake: the port lock does not
necessarily correspond to a program's desired atomic unit of I/O, so
correct programs would likely have to have their own locking.  At the
same time the port buffering refactoring made it possible for us to
avoid the crashes that led to the introduction of locking, but without
locks.  For that reason we have removed port locks, and removed the
"_unlocked" port API variants that were introduced in 2.1.0.

* New deprecations
** `_IONBF', `_IOLBF', and `_IOFBF'

Instead, use the symbol values `none', `line', or `block', respectively,
as arguments to the `setvbuf' function.

* Incompatible changes

** Decoding errors do not advance the read pointer before erroring

When the user sets a port's conversion strategy to "error", indicating
that Guile should throw an error if it tries to read from a port whose
incoming bytes are not valid for the port's encoding, it used to be that
Guile would advance the read pointer past the bad bytes, and then throw
an error.  This would allow the following `read-char' invocation to
proceed after the bad bytes.  This behavior is incompatible with the
final R6RS standard, and besides contravenes the user's intention to
raise an error on bad input.  Guile now raises an error without
advancing the read pointer.  To skip over a bad encoding, set the port
conversion strategy to "substitute" and read a substitute character.
