@@ -179,7 +179,10 @@ interpret its input and output."
             specialize-port-encoding!
             port-random-access?
             port-decode-char
-            port-read-buffering))
+            port-read-buffering
+            port-poll
+            port-read-wait-fd
+            port-write-wait-fd))
 
 (define-syntax-rule (port-buffer-bytevector buf) (vector-ref buf 0))
 (define-syntax-rule (port-buffer-cur buf) (vector-ref buf 1))
@@ -209,7 +212,10 @@ interpret its input and output."
                        specialize-port-encoding!
                        port-decode-char
                        port-random-access?
-                       port-read-buffering)
+                       port-read-buffering
+                       port-poll
+                       port-read-wait-fd
+                       port-write-wait-fd)
 
 ;; And we're back.
 (define-module (ice-9 ports))
